force-app/main/default/objects/sugati__Email_Template__c/sugati__Email_Template__c.object-meta.xml
<CustomObject>
    <description>A list of email templates.
A lot of improvement to be done on V2.</description>
    <label>Communication Template</label>
    <nameField>
        <displayFormat>HSET-{0000000000}</displayFormat>
        <label>Holiday Suggestion Email Template ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Communication Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>