force-app/main/default/objects/sugati__Email_Template__c/fields/sugati__Email_Head__c.field-meta.xml
<CustomField>
    <fullName>sugati__Email_Head__c</fullName>
    <label>Email Head</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>