force-app/main/default/objects/sugati__Email_Template__c/fields/sugati__ET_Auto_Attchment_Documents__c.field-meta.xml
<CustomField>
    <fullName>sugati__ET_Auto_Attchment_Documents__c</fullName>
    <label>Auto Attached Documents</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ATOL</fullName>
            </value>
            <value>
                <fullName>Itinerary</fullName>
            </value>
            <value>
                <fullName>Invoice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>