force-app/main/default/objects/sugati__Email_Template__c/fields/sugati__ET_Component__c.field-meta.xml
<CustomField>
    <fullName>sugati__ET_Component__c</fullName>
    <label>Component</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>sugati__SB_Components</valueSetName>
    </valueSet>
</CustomField>