force-app/main/default/objects/sugati__Email_Template__c/fields/sugati__ET_Condition__c.field-meta.xml
<CustomField>
    <fullName>sugati__ET_Condition__c</fullName>
    <label>Condition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>