force-app/main/default/objects/sugati__Email_Template__c/fields/sugati__ET_Copy_Invoice_Notes_to_Supplier_Cost__c.field-meta.xml
<CustomField>
    <fullName>sugati__ET_Copy_Invoice_Notes_to_Supplier_Cost__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Should be checked when you want to copy invoice notes to supplier cost notes (Description ) field</inlineHelpText>
    <label>Copy Invoice Notes to Supplier Cost</label>
    <type>Checkbox</type>
</CustomField>