force-app/main/default/objects/sugati__Email_Template__c/fields/sugati__ET_Email_Intro__c.field-meta.xml
<CustomField>
    <fullName>sugati__ET_Email_Intro__c</fullName>
    <label>Email Intro / Itinerary Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>