force-app/main/default/objects/sugati__Email_Template__c/fields/sugati__ET_Itinerary_At_A_Glance_Template__c.field-meta.xml
<CustomField>
    <fullName>sugati__ET_Itinerary_At_A_Glance_Template__c</fullName>
    <label>Itinerary At A Glance Template</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>