force-app/main/default/objects/sugati__Email_Template__c/fields/sugati__ET_Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>sugati__ET_Opportunity_Stage__c</fullName>
    <label>Opportunity Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enquiry</fullName>
            </value>
            <value>
                <fullName>Quote pending</fullName>
            </value>
            <value>
                <fullName>Quoted to client</fullName>
            </value>
            <value>
                <fullName>Quote gone cold</fullName>
            </value>
            <value>
                <fullName>Booking Optional</fullName>
            </value>
            <value>
                <fullName>Booked</fullName>
            </value>
            <value>
                <fullName>Training enquiry</fullName>
            </value>
            <value>
                <fullName>Redundant</fullName>
            </value>
            <value>
                <fullName>Enquiry gone cold</fullName>
            </value>
            <value>
                <fullName>Booking Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>