force-app/main/default/objects/sugati__Email_Template__c/fields/sugati__ET_Page_Section__c.field-meta.xml
<CustomField>
    <fullName>sugati__ET_Page_Section__c</fullName>
    <label>Page/Section Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Acknowledgement</fullName>
            </value>
            <value>
                <fullName>Client Payment</fullName>
            </value>
            <value>
                <fullName>Holiday Suggestions</fullName>
            </value>
            <value>
                <fullName>SupplierPayments</fullName>
            </value>
            <value>
                <fullName>Accommodation</fullName>
            </value>
            <value>
                <fullName>Int Flight</fullName>
            </value>
            <value>
                <fullName>Transfer</fullName>
            </value>
            <value>
                <fullName>Tuck-Tuck</fullName>
            </value>
            <value>
                <fullName>Car Hire</fullName>
            </value>
            <value>
                <fullName>Dom Flights</fullName>
            </value>
            <value>
                <fullName>Excursion</fullName>
            </value>
            <value>
                <fullName>Ferry</fullName>
            </value>
            <value>
                <fullName>Light Aircraft</fullName>
            </value>
            <value>
                <fullName>Meet &amp; Greet</fullName>
            </value>
            <value>
                <fullName>Private Jet</fullName>
            </value>
            <value>
                <fullName>Private Road Transfer</fullName>
            </value>
            <value>
                <fullName>Private Speed Boat Transfer</fullName>
            </value>
            <value>
                <fullName>Private Transfer with Excursion</fullName>
            </value>
            <value>
                <fullName>Rail</fullName>
            </value>
            <value>
                <fullName>Sea Plane</fullName>
            </value>
            <value>
                <fullName>Shared Road Transfer</fullName>
            </value>
            <value>
                <fullName>Shared Speed Boat Transfer</fullName>
            </value>
            <value>
                <fullName>Shared Transfer with Excursion</fullName>
            </value>
            <value>
                <fullName>VIP Meet And Greet</fullName>
            </value>
            <value>
                <fullName>Visa Fast Track</fullName>
            </value>
            <value>
                <fullName>Cruise</fullName>
            </value>
            <value>
                <fullName>Send Email</fullName>
            </value>
            <value>
                <fullName>SupplierVouchers</fullName>
            </value>
            <value>
                <fullName>SendItineraryPDF</fullName>
            </value>
            <value>
                <fullName>SendInvoicePDF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>