force-app/main/default/objects/sugati__Email_Template__c/fields/sugati__ET_Related_To_Record__c.field-meta.xml
<CustomField>
    <fullName>sugati__ET_Related_To_Record__c</fullName>
    <label>Related To Record</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Client_Group__c</fullName>
            </value>
            <value>
                <fullName>Client_Invoice__c</fullName>
            </value>
            <value>
                <fullName>Client_Payment__c</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>Supplier__c</fullName>
            </value>
            <value>
                <fullName>Supplier_Payment__c</fullName>
            </value>
            <value>
                <fullName>Group_Member__c</fullName>
            </value>
            <value>
                <fullName>Supplier_Booking__c</fullName>
            </value>
            <value>
                <fullName>Supplier_Cost_Payment__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>