force-app/main/default/objects/sugati__Email_Template__c/fields/sugati__ET_Supplier_Booking_Notes_Template__c.field-meta.xml
<CustomField>
    <fullName>sugati__ET_Supplier_Booking_Notes_Template__c</fullName>
    <description>Template for the text to be added to the Notes field on Supplier Booking.</description>
    <inlineHelpText>Template for the text to be added to the Notes field on Supplier Booking.</inlineHelpText>
    <label>Supplier Booking Notes Template</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>