force-app/main/default/objects/sugati__Email_Template__c/fields/sugati__ET_Supplier_Notes_Template_Rich__c.field-meta.xml
<CustomField>
    <fullName>sugati__ET_Supplier_Notes_Template_Rich__c</fullName>
    <label>Supplier Notes Template</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>