force-app/main/default/objects/sugati__Email_Template__c/fields/sugati__ET_Template_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__ET_Template_Name__c</fullName>
    <label>Template Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>