force-app/main/default/objects/sugati__Email_Template__c/fields/sugati__ET_User__c.field-meta.xml
<CustomField>
    <fullName>sugati__ET_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Holiday_Suggestion_Email_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>