force-app/main/default/objects/sugati__Email_Template__c/fields/sugati__To_Address_Filter__c.field-meta.xml
<CustomField>
    <fullName>sugati__To_Address_Filter__c</fullName>
    <label>To Address Filter</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Availability</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Payment</fullName>
            </value>
            <value>
                <fullName>Registration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>