force-app/main/default/objects/sugati__Email_Template__c/recordTypes/sugati__Email.recordType-meta.xml
<RecordType>
    <fullName>sugati__Email</fullName>
    <active>true</active>
    <description>Is this for Email Templates?</description>
    <label>Email</label>
</RecordType>