force-app/main/default/objects/sugati__Email_Template__c/recordTypes/sugati__Print_Template.recordType-meta.xml
<RecordType>
    <fullName>sugati__Print_Template</fullName>
    <active>true</active>
    <description>Is this the Print Template?</description>
    <label>Print Template</label>
</RecordType>