force-app/main/default/objects/sugati__Email_Template__c/listViews/sugati__Description_Text.listView-meta.xml
<ListView>
    <fullName>sugati__Description_Text</fullName>
    <columns>NAME</columns>
    <columns>sugati__ET_Template_Name__c</columns>
    <columns>sugati__ET_User__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>sugati__ET_Page_Section__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>sugati__Email_Template__c.sugati__Print_Template</value>
    </filters>
    <label>Description Text</label>
</ListView>